<resources>

    <string name="app_name">Learn-Kotlin-Coroutines</string>
    <string name="single_network_call">Single Network Call</string>
    <string name="series_network_calls">Series Network Calls</string>
    <string name="parallel_network_calls">Parallel Network Calls</string>
    <string name="room_database">Room Database</string>
    <string name="timeout">Timeout</string>
    <string name="try_catch_error">Try-Catch Error</string>
    <string name="exception_handler">ExceptionHandler</string>
    <string name="ignore_error_and_continue">Ignore Error And Continue</string>
    <string name="long_running_task">Long Running Task</string>
    <string name="two_long_running_tasks">Two Long Running Tasks</string>
    <string name="basic">Basic</string>
    <string name="basic_with_exception">Basic with Exception Handling</string>
    <string name="basic_more_examples">Basic - More Examples</string>
    <string name="suspendCoroutine">suspendCoroutine</string>
    <string name="suspendCancellableCoroutine">suspendCancellableCoroutine </string>
    <string name="start_task_1">start task 1</string>
    <string name="start_task_2">start task 2</string>
    <string name="end_task_1">end task 1</string>
    <string name="end_task2">end task2</string>

</resources>