<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:paddingLeft="16dp"
    android:paddingTop="24dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:paddingBottom="24dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startBasicActivity"
            android:text="@string/basic"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startBasicActivityWithExceptionHandling"
            android:text="@string/basic_with_exception"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startBasicActivityWithMoreExamples"
            android:text="@string/basic_more_examples"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSingleNetworkCallActivity"
            android:text="@string/single_network_call"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/yellow"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSeriesNetworkCallsActivity"
            android:text="@string/series_network_calls"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/yellow"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startParallelNetworkCallsActivity"
            android:text="@string/parallel_network_calls"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/yellow"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startRoomDatabaseActivity"
            android:text="@string/room_database"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/orange"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startIgnoreErrorAndContinueActivity"
            android:text="@string/ignore_error_and_continue"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/orange"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startExceptionHandlerActivity"
            android:text="@string/exception_handler"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startTimeoutActivity"
            android:text="@string/timeout"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />


    </LinearLayout>
</ScrollView>
